# deadpool

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release.toml  sync-readme.py  test-build.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postgres.env  rabbitmq.env
.github/workflows/: ci.yml  rust.yml
arangodb/: CHANGELOG.md  Cargo.toml  README.md
arangodb/src/: config.rs  lib.rs
arangodb/tests/: arangodb.rs
benches/: managed.rs  unmanaged.rs
diesel/: CHANGELOG.md  Cargo.toml  README.md
diesel/src/: connection.rs  error.rs  lib.rs  manager.rs  mysql.rs  postgres.rs  sqlite.rs
diesel/tests/: basics.rs
examples/diesel/: Cargo.toml
examples/diesel/src/: main.rs
examples/postgres-actix-web/: Cargo.toml  README.md
examples/postgres-actix-web/src/: main.rs
examples/postgres-axum/: Cargo.toml  README.md  fixture.sql
examples/postgres-axum/src/: main.rs
examples/postgres-benchmark/: .env  Cargo.toml  README.md
examples/postgres-benchmark/src/: .main.rs.swp  main.rs
examples/postgres-hyper/: Cargo.toml  README.md
examples/postgres-hyper/src/: main.rs
examples/readme/: Cargo.toml
examples/readme/src/: main.rs
examples/redis-actix-web/: .gitignore  Cargo.toml  README.md
examples/redis-actix-web/src/: main.rs
lapin/: CHANGELOG.md  Cargo.toml  README.md
lapin/src/: config.rs  lib.rs
memcached/: CHANGELOG.md  Cargo.toml  README.md  release.toml
memcached/src/: lib.rs
memcached/tests/: basic.rs
postgres/: CHANGELOG.md  Cargo.toml  CcHANGELOG.md  README.md
postgres/src/: config.rs  generic_client.rs  lib.rs
postgres/tests/: async_trait.rs  postgres.rs
r2d2/: CHANGELOG.md  Cargo.toml  README.md
r2d2/src/: lib.rs  manager.rs
redis/: CHANGELOG.md  Cargo.toml  README.md
redis-cluster/: CHANGELOG.md  Cargo.toml  README.md
redis-cluster/src/: config.rs  lib.rs
redis-cluster/tests/: redis.rs
redis/src/: cmd_wrapper.rs  config.rs  lib.rs  pipeline_wrapper.rs
redis/src/cluster/: config.rs  mod.rs
redis/src/sentinel/: config.rs  mod.rs
redis/tests/: issue_130.rs  redis.rs  redis_cluster.rs  redis_sentinel.rs
runtime/: CHANGELOG.md  Cargo.toml  README.md
runtime/src/: lib.rs
sqlite/: CHANGELOG.md  Cargo.toml  README.md
sqlite/src/: config.rs  lib.rs
sqlite/tests/: sqlite.rs
src/: compat_0_4.rs  config.rs  errors.rs  lib.rs  passive.rs  postgres.rs  runtime.rs
src/managed/: builder.rs  config.rs  customizer.rs  dropguard.rs  errors.rs  hooks.rs  metrics.rs  mod.rs  reexports.rs  sync.rs
src/managed/sync/: mod.rs  reexports.rs
src/unmanaged/: config.rs  errors.rs  mod.rs
sync/: CHANGELOG.md  Cargo.toml  README.md
sync/src/: lib.rs  reexports.rs
sync/tests/: sync.rs
tests/: deadlock.rs  explicit_add.rs  managed.rs  managed_cancellation.rs  managed_config.rs  managed_customizer.rs  managed_deadlock.rs  managed_hooks.rs  managed_resize.rs  managed_sync.rs  managed_timeout.rs  managed_unreliable_manager.rs  postgres.rs  unmanaged.rs  unmanaged_timeout.rs  unreliable_manager.rs
