[package]
name = "deadpool"
version = "0.8.2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool"
keywords = ["async", "database", "pool"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"
edition = "2018"
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[dependencies]
num_cpus = "1.11.1"
# only required when using the `managed` feature
async-trait = { version = "0.1.17", optional = true }
# only required when using the `config` feature
config-crate = { package = "config", version = "0.11", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
# The dependency of tokio::sync is non-optional. Deadpool depends on
# `tokio::sync::Semaphore`. No other features of tokio is enabled or used
# unless the `rt_tokio_1` feature is enabled.
tokio = { version = "1", features = ["sync"] }
async-std = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
async-std = { version = "1", features = ["attributes"] }

[workspace]
members = [
    "postgres",
    "lapin",
    "redis",
    "sqlite",
    "diesel",
]
exclude = [
    "examples",
]

[features]
default = ["managed", "unmanaged", "config"]
config = ["config-crate", "serde"]
managed = ["async-trait"]
unmanaged = []
rt_tokio_1 = ["tokio/time"]
rt_async-std_1 = ["async-std"]

[[bench]]
name = "unmanaged"
harness = false
