[package]
name = "deadpool"
version = "0.9.0-pre"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool"
keywords = ["async", "database", "pool"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["managed", "unmanaged"]
managed = ["async-trait"]
unmanaged = []
rt_tokio_1 = ["tokio/time", "tokio/rt"]
rt_async-std_1 = ["async-std"]

[dependencies]
num_cpus = "1.11.1"
# `managed` feature
async-trait = { version = "0.1.17", optional = true }
# `serde` feature
serde = { version = "1.0", features = ["derive"], optional = true }
# `rt_async-std_1` feature
async-std = { version = "1", features = ["unstable"], optional = true }
# The dependency of tokio::sync is non-optional. Deadpool depends on
# `tokio::sync::Semaphore`. No other features of `tokio` are enabled or used
# unless the `rt_tokio_1` feature is enabled.
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
config = { version = "0.11", default-features = false }
criterion = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }

[[bench]]
name = "unmanaged"
harness = false

[workspace]
members = [
    "postgres",
    "lapin",
    "redis",
    "sqlite",
    "diesel",
]
exclude = [
    "examples",
]
