[package]
name = "deadpool"
version = "0.9.2"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool"
keywords = ["async", "database", "pool"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["managed", "unmanaged"]
managed = ["async-trait"]
unmanaged = []
rt_tokio_1 = ["deadpool-runtime/tokio_1"]
rt_async-std_1 = ["deadpool-runtime/async-std_1"]

[dependencies]
num_cpus = "1.11.1"
retain_mut ="0.1.6"
# `managed` feature
async-trait = { version = "0.1.17", optional = true }
# `serde` feature
serde = { version = "1.0.103", features = ["derive"], optional = true }
# `rt_async-std_1` feature
deadpool-runtime = { version = "0.1", path = "./runtime" }
# The dependency of tokio::sync is non-optional. Deadpool depends on
# `tokio::sync::Semaphore`. No other features of `tokio` are enabled or used
# unless the `rt_tokio_1` feature is enabled.
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
async-std = { version = "1.0", features = ["attributes"] }
config = { version = "0.11", default-features = false }
criterion = "0.3"
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread", "time"] }

[[bench]]
name = "unmanaged"
harness = false

[workspace]
members = [
    "diesel",
    "lapin",
    "postgres",
    "r2d2",
    "redis",
    "runtime",
    "sqlite",
    "sync",
    "examples/*"
]
