[package]
name = "deadpool-arangodb"
version = "0.1.0"
edition = "2018"
resolver = "2"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
description = "Dead simple async pool for ArangoDB"
keywords = ["async", "database", "pool", "arango", "arangodb"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool/arangodb"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "arangors/reqwest_async"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "arangors/surf_async"]

[dependencies]
deadpool = { path = "../", version = "0.10.0", default-features = false, features = [
    "managed",
    "serde",
] }
arangors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"

[dev-dependencies]
config = { version = "0.13", default-features = false }
dotenv = "0.15.0"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
