[package]
name = "deadpool-diesel"
version = "0.2.0"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for diesel"
keywords = ["async", "database", "pool", "diesel"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde"]

[dependencies]
deadpool = { path = "../", version = "0.9.0", default-features = false, features = ["managed"] }
diesel = { version = "1.4.7", default-features = false }

[dev-dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }

