[package]
name = "deadpool-diesel"
version = "0.6.1"
edition = "2021"
rust-version = "1.78"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for diesel"
keywords = ["async", "database", "pool", "diesel"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde"]
tracing = ["deadpool-sync/tracing"]

[dependencies]
deadpool = { path = "../", version = "0.12.0", default-features = false, features = [
    "managed",
] }
deadpool-sync = { path = "../sync", version = "0.1.1" }
diesel = { version = "2.2.0", default-features = false }

[dev-dependencies]
diesel = { version = "2.2.0", default-features = false, features = ["sqlite"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
