[package]
name = "deadpool-lapin"
version = "0.8.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for lapin"
keywords = ["async", "lapin", "pool", "amqp", "rabbitmq"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"
edition = "2018"
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[dependencies]
deadpool = { path = "../", version = "0.8", default-features = false, features = ["managed"] }
async-trait = "0.1.17"
log = "0.4"
# only required when using the config feature
config-crate = { package = "config", version = "0.11", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio-amqp = { version = "1.0", optional = true }
async-amqp = { version = "1.2", optional = true }

[dependencies.lapin]
version = "1"
default-features = false

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-amqp = "1"
dotenv = "0.15"

[features]
default = ["config", "rt_tokio_1"]
config = ["config-crate", "serde", "deadpool/config"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "tokio-amqp"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "async-amqp"]
