[package]
name = "deadpool-lapin"
version = "0.10.0"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for lapin"
keywords = ["async", "lapin", "pool", "amqp", "rabbitmq"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "tokio-executor-trait"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "async-executor-trait"]
serde = ["deadpool/serde", "serde_1"]

[dependencies]
async-executor-trait = { version = "2.1", optional = true }
deadpool = { path = "../", version = "0.9.0", default-features = false, features = ["managed"] }
lapin = { version = "2.0", default-features = false }
serde_1 = { package = "serde", version = "1.0.103", features = ["derive"], optional = true }
tokio-executor-trait = { version = "2.1.0", optional = true }

[dev-dependencies]
config = { version = "0.11", default-features = false }
dotenv = "0.15"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
