[package]
name = "deadpool-lapin"
version = "0.12.1"
edition = "2021"
rust-version = "1.75"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for lapin"
keywords = ["async", "lapin", "pool", "amqp", "rabbitmq"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "tokio-executor-trait"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "async-executor-trait"]
serde = ["deadpool/serde", "dep:serde"]

[dependencies]
async-executor-trait = { version = "2.1", optional = true }
deadpool = { path = "../", version = "0.12.0", default-features = false, features = [
    "managed",
] }
lapin = { version = "2.0", default-features = false }
serde = { package = "serde", version = "1.0.103", features = [
    "derive",
], optional = true }
tokio-executor-trait = { version = "2.1.0", optional = true }

# Not really used, added to survive `minimal-versions` check only.
# TODO: Remove once new `async-std` version above 1.12.0 is released,
#       as it's already fixed in their `main` branch. This, of course,
#       will require bumping minimal version of `async-std` across the workspace.
async-global-executor = { version = "2.3.1", optional = true, default-features = false }

[dev-dependencies]
config = { version = "0.14", features = ["json"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = ["async-global-executor"]
