[package]
name = "deadpool-postgres"
version = "0.12.1"
edition = "2018"
resolver = "2"
rust-version = "1.63"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for tokio-postgres"
keywords = ["async", "database", "pool", "postgres"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde", "serde_1"]

[dependencies]
deadpool = { path = "../", version = "0.10.0", default-features = false, features = [
    "managed",
] }
serde_1 = { package = "serde", version = "1.0", features = [
    "derive",
], optional = true }
tokio = { version = "1.29", features = ["rt"] }
tokio-postgres = "0.7.9"
tracing = "0.1.37"

[dev-dependencies]
config = { version = "0.13", features = ["json"] }
dotenv = "0.15.0"
futures = "0.3.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
