[package]
name = "deadpool-postgres"
version = "0.14.0"
edition = "2021"
rust-version = "1.75"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for tokio-postgres"
keywords = ["async", "database", "pool", "postgres"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde", "dep:serde"]

[dependencies]
async-trait = "0.1.80"
deadpool = { path = "../", version = "0.12.0", default-features = false, features = [
    "managed",
] }
serde = { package = "serde", version = "1.0", features = [
    "derive",
], optional = true }
tokio = { version = "1.29", features = ["rt"] }
tracing = "0.1.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-postgres = "0.7.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tokio-postgres = { version = "0.7.9", default-features = false }

[dev-dependencies]
config = { version = "0.14", features = ["json"] }
dotenvy = "0.15.0"
futures = "0.3.1"
futures-util = "0.3.30"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
