[package]
name = "deadpool-r2d2"
version = "0.4.1"
edition = "2021"
rust-version = "1.75"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for r2d2 managers"
keywords = ["async", "database", "pool", "r2d2"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde"]
tracing = ["deadpool-sync/tracing"]

[dependencies]
deadpool = { path = "../", version = "0.12.0", default-features = false, features = [
    "managed",
] }
deadpool-sync = { path = "../sync", version = "0.1.1" }
r2d2 = { version = "0.8.9", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
deadpool = { path = "../", version = "0.12", features = ["rt_tokio_1"] }
r2d2_postgres = "0.18"
