[package]
name = "deadpool-redis"
version = "0.7.1"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for redis"
keywords = ["async", "redis", "pool"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"
edition = "2018"
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[dependencies]
deadpool = { path = "../", version = "0.7", default-features = false, features = ["managed"] }
async-trait = "0.1.17"
log = "0.4"
redis = { version = "0.20", default-features = false, features = ["aio"] }
# only required when using the config feature
config-crate = { package = "config", version = "0.11", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
redis = { version = "0.20", default-features = false, features = ["tokio-comp"] }
dotenv = "0.15.0"
futures = "0.3.15"

[features]
default = ["config", "rt_tokio_1"]
config = ["config-crate", "serde", "deadpool/config"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "redis/tokio-comp"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "redis/async-std-comp"]
