[package]
name = "deadpool-redis"
version = "0.9.0-pre"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for redis"
keywords = ["async", "redis", "pool"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
serde = ["deadpool/serde", "serde_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "redis/tokio-comp"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "redis/async-std-comp"]

[dependencies]
async-trait = "0.1.17"
deadpool = { path = "../", version = "0.9.0-pre", default-features = false, features = ["managed"] }
log = "0.4"
redis = { version = "0.21", default-features = false, features = ["aio"] }
serde_1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
config = { version = "0.11", default-features = false }
dotenv = "0.15.0"
futures = "0.3.15"
redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
