[package]
name = "deadpool-redis"
version = "0.18.0"
edition = "2021"
rust-version = "1.75"
authors = [
    "Michael P. Jung <michael.jung@terreon.de>",
    "Subeom Choi <subumm1@gmail.com>",
]
description = "Dead simple async pool for redis"
keywords = ["async", "redis", "pool"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "redis/tokio-comp"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "redis/async-std-comp"]
serde = ["deadpool/serde", "dep:serde"]
cluster = ["redis/cluster-async"]
sentinel = ["redis/sentinel", "tokio/sync"]

[dependencies]
deadpool = { path = "../", version = "0.12.0", default-features = false, features = [
    "managed",
] }
redis = { version = "0.28", default-features = false, features = ["aio"] }
serde = { package = "serde", version = "1.0", features = [
    "derive",
], optional = true }
tokio = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
config = { version = "0.14", features = ["json"] }
dotenvy = "0.15.0"
futures = "0.3.15"
redis = { version = "0.28", default-features = false, features = [
    "tokio-comp",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
