[package]
name = "deadpool-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rt_tokio_1 = ["tokio/time", "tokio/rt"]
rt_async-std_1 = ["async-std"]

[dependencies]
# `rt_async-std_1` feature
async-std = { version = "1.0", features = ["unstable"], optional = true }
# The dependency of tokio::sync is non-optional. Deadpool depends on
# `tokio::sync::Semaphore`. No other features of `tokio` are enabled or used
# unless the `rt_tokio_1` feature is enabled.
tokio = { version = "1.0", features = ["sync"], optional = true }
