[package]
name = "deadpool-runtime"
version = "0.1.2"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool utitities for sync managers"
keywords = ["async", "database", "pool", "sync", "utils"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std_1 = { package = "async-std", version = "1.0", features = ["unstable"], optional = true }
tokio_1 = { package = "tokio", version = "1.0", features = ["time", "rt"], optional = true }
