[package]
name = "deadpool-sqlite"
version = "0.2.0-pre"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for rusqlite"
keywords = ["async", "database", "pool", "sqlite"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde", "serde_1"]

[dependencies]
deadpool = { path = "../", version = "0.9.0-pre", default-features = false, features = ["managed"] }
rusqlite = "0.26"
serde_1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
config = { version = "0.11", default-features = false }
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
