[package]
name = "deadpool-sync"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool utitities for sync managers"
keywords = ["async", "database", "pool", "sync", "utils"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-runtime = { version = "0.1.2", path = "../runtime" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
deadpool = { version = "0.12", path = "..", features = ["rt_tokio_1"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
