[package]
name = "example-postgres-actix-web"
version = "0.0.0"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
publish = false

[dependencies]
actix-web = "4.0.0-beta.8"
config = "0.12.0"
deadpool-postgres = { version = "0.10.0-pre", path = "../../postgres", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde"] }
