[package]
name = "deadpool-example-postgres-actix-web"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"

[dependencies]
config = { package = "config", version = "0.10" }
deadpool-postgres = { version = "0.7", path = "../../postgres" }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7" }
