[package]
name = "example-postgres-benchmark"
version = "0.0.0"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
publish = false

[dependencies]
config = "0.12.0"
deadpool-postgres = { version = "0.10.0-pre", path = "../../postgres", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7" }
