[package]
name = "example-postgres-benchmark"
version = "0.0.0"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
publish = false

[dependencies]
config = "0.14"
deadpool-postgres = { path = "../../postgres", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7" }
