[package]
name = "deadpool-example-postgres-hyper"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime"] }
config = "0.10"
deadpool-postgres = { version = "0.7", path = "../../postgres" }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
