[package]
name = "example-postgres-hyper"
version = "0.0.0"
edition = "2018"
resolver = "2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
publish = false

[dependencies]
config = "0.12.0"
deadpool-postgres = { version = "0.10.0-pre", path = "../../postgres", features = ["serde"] }
dotenv = "0.15"
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde"] }
