[package]
name = "readme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14"
deadpool-postgres = { path = "../../postgres", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
